# symbolic_inference

./: .gitignore
gsm8k_variable/: checker.py  gsm8k_variable.py  readme.md  sample_samples.py
gsm8k_variable/tree-sitter-math/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
gsm8k_variable/tree-sitter-math/bindings/c/: tree-sitter-math.h  tree-sitter-math.pc.in
gsm8k_variable/tree-sitter-math/bindings/go/: binding.go  binding_test.go
gsm8k_variable/tree-sitter-math/bindings/node/: binding.cc  index.js
gsm8k_variable/tree-sitter-math/bindings/python/tests/: test_binding.py
gsm8k_variable/tree-sitter-math/bindings/python/tree_sitter_math/: __init__.py  binding.c
gsm8k_variable/tree-sitter-math/bindings/rust/: build.rs  lib.rs
gsm8k_variable/tree-sitter-math/bindings/swift/TreeSitterMathTests/: TreeSitterMathTests.swift
gsm8k_variable/tree-sitter-math/src/: grammar.json  node-types.json  parser.c
